# GenericServer

./: Astar.cpp  Astar.h  BestFs.cpp  BestFs.h  Bfs.cpp  Bfs.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  Dfs.cpp  Dfs.h  FileCacheManager.cpp  FileCacheManager.h  Main.h  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Point.h  Searchable.h  SearchableMatrix.cpp  SearchableMatrix.h  Searcher.h  SearcherResult.h  SearcherSolver.cpp  SearcherSolver.h  Server.h  Solver.h  State.h  StringReverser.cpp  StringReverser.h  Tester.h  UpdatablePriorityQueue.h  Utils.cpp  Utils.h  main.cpp
